Revision history for MetaCPAN-Client (previously MetaCPAN-API)

2.010000    3.4.17
            * Added support for new 'permission' type (Mickey)

2.009001    29.3.17
            * Use Test::Needs to force a minimum
              WWW::Mechanize::Cached version (Olaf Alders, GH#76)

2.009000    24.3.17
            * Bump WWW::Mechanize::Cached version to 1.50 (Olaf Alders, GH#76)
            * Require LWP::Protocol::https in tests (Mickey, GH#79)
            * Added 'changes' method for Release objects (Mickey, GH#57)
            * Cleaner URLs - removed redundant slashes and 'v1' (Mickey)
            * Created a role for user-agent handling for reuse (Mickey)

2.008001    23.3.17
            * Fixed a test (Mickey)

2.008000    22.3.17
            * Added metacpan_url method to the entity objects
              (Mickey, #GH69)

2.007000    8.3.17
            * Update tests for newer Perl versions, to run without
              '.' in @INC (Sawyer X, GH#72)

2.006000    24.2.17
            * Support '_source' filtering (Mickey, GH#70)
            * Support debug-mode for detailed error messages (Mickey)

2.005000    13.2.17
            * Added the ascii_name and perlmongers fields to the Author object
              (Dave Rolsky, GH #66)
            * Fixed Author->dir to actually return something (Dave Rolsky, GH
              #66)

2.004000    30.12.16
            * Speed up own scroller (Mickey)
            * Fixed rev_deps (Mickey)

2.004000-TRIAL 24.12.16
            * Removed dependency: Search::Elasticsearch
              in favor of an internal scroller (Mickey)
            * Added Types class for 'isa' checks (Mickey)

2.003000    19.12.16
            * Escaped query to autocomplete (Mickey)
            * Removed dependency: Try::Tiny (Mickey)

2.002000    14.12.16
            * Support 'autocomplete' endpoint (Mickey)

2.001000    08.12.16
            * Distribution: added 'rt' & 'github' methods (Mickey)
            * Use Ref::Util for ref checks (Mickey)
